--- a/staging/index.html
+++ b/staging/index.html
@@ -676,7 +676,7 @@
     else if(item.action.type === 'copy') actionButton.textContent = 'Kopiera länk';
     else if(item.action.type === 'download') actionButton.textContent = 'Ladda ner';
     else if(item.action.type === 'call') actionButton.textContent = 'Se manus';
-    else if(item.action.type === 'dm') actionButton.textContent = 'Kopiera DM';
+    else if(item.action.type === 'dm') actionButton.textContent = 'Dela DM';
     else if(item.action.type === 'video') actionButton.textContent = 'Se video';
     else actionButton.textContent = item.title;
 
