--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
       door.setAttribute('data-day', (index + 1));
 
       const front = document.createElement('div'); front.className='door-front';
-      front.innerHTML=`<div style='text-align:center'><div class='door-number'>${(index + 1)}</div><div class='door-sub'>${item.title}</div></div>`;
+      front.innerHTML=`<div style='text-align:center'><div class='door-number'>${(index + 1)}</div></div>`;
       const back = document.createElement('div'); back.className='door-back';
       back.innerHTML=`<div class='door-back-content'>${item.title}</div>`;
 
@@ -757,3 +757,4 @@
 
 </body>
 </html>
+
