--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
           break;
 
         case 'poll':
-          showToast('Delta i en snabb enkät (länk öppnas).');
+          showToast('Delta i en snabb enkät.');
           break;
 
         case 'ugc':
@@ -793,3 +793,4 @@
 
 </body>
 </html>
+
