--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
           break;
 
         case 'poll':
-          showToast('Delta i en snabb enkät.');
+          showToast('Skapa en omröstning på din sociala medier.');
           break;
 
         case 'ugc':
@@ -793,4 +793,5 @@
 
 </body>
 </html>
+
 
