--- a/quiz.html
+++ b/quiz.html
@@ -395,6 +395,21 @@
       to { transform: rotate(360deg); }
     }
 
+    .share-btn,
+    .restart-btn {
+      display: block;
+      margin: 0.5rem auto;
+    }
+
+    .overall-score {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: #dd6031;
+      margin: 1rem 0;
+      text-align: center;
+    }
+
+
   </style>
   <style>@view-transition { navigation: auto; }</style>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
