--- a/quiz.html
+++ b/quiz.html
@@ -323,14 +323,11 @@
     }
 
     .overall-score {
-      text-align: center;
-      background: #faf8f3;
-      padding: 0.75rem 1.5rem;
-      border-radius: 12px;
-      display: inline-block;
-      margin: 1.5rem auto;
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: #dd6031;
+      margin: 1rem 0;
     }
-
 
     .back-arrow-btn {
       background: transparent;
