--- a/quiz.html
+++ b/quiz.html
@@ -841,7 +841,7 @@
       ctx.fillText('Rättvisa Malmö Quiz', canvas.width / 2, 200);
 
       // Logo
-      const imageUrl = "https://raw.githubusercontent.com/rattvisamalmo/advent-calendar/main/1.png";
+      const logoUrl = "https://raw.githubusercontent.com/rattvisamalmo/advent-calendar/main/1.png";
       const logo = new Image();
       logo.crossOrigin = "anonymous"; // important for canvas export
 
