--- a/quiz.html
+++ b/quiz.html
@@ -863,15 +863,15 @@
       ctx.fillStyle = '#311e10';
       ctx.font = 'bold 120px Arial';
       ctx.textAlign = 'center';
-      ctx.fillText("Jag fick", canvas.width / 2, 700);
+      ctx.fillText("Jag fick", canvas.width / 2, 600);
       const scoreText = totalScore + "/" + maxPossibleScore;
-      ctx.fillText(scoreText, canvas.width / 2, 900);
-      ctx.fillText("på quizet!", canvas.width / 2, 1100);
+      ctx.fillText(scoreText, canvas.width / 2, 800);
+      ctx.fillText("på quizet!", canvas.width / 2, 1000);
 
       // Individual scores
       ctx.fillStyle = '#311e10';
       ctx.font = '65px Arial';
-      const yStart = 1300;
+      const yStart = 1200;
       ctx.fillText(`Lätt`, 324, yStart);
       ctx.fillText(`Medium`, 580, yStart);
       ctx.fillText(`Svårt`, 756, yStart);
@@ -880,7 +880,7 @@
       ctx.fillText(`${overallScores.svårt}/5`, 756, yStart + 100);
 
 
-      ctx.fillStyle = '#311e10';
+      ctx.fillStyle = '#dd6031';
       ctx.font = 'bold 70px Arial';
       ctx.fillText('Testa din kunskap om', canvas.width / 2, 1650);
       ctx.fillText('vår kampanj!', canvas.width / 2, 1750);
